actualización del handoff con comandos de fallback.